# simple-otp

./: .gitignore  README.md  Simple-OTP.spec  main.py  pyproject.toml
simple_otp/: counterbased.py  genkey.py  timebased.py
